<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="8dp">

  <ImageView
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_gravity="center_horizontal"
      android:contentDescription="@string/logo_contentDescription"
      app:srcCompat="@drawable/app_icon"/>

  <TextView
      android:id="@+id/delete_prompt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      style="@style/TextAppearance.AppCompat.Subhead"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="end"
      android:layout_marginTop="24dp"
      android:orientation="horizontal">

    <Button
        android:id="@+id/delete_yes_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_yes"/>

    <Button
        android:id="@+id/delete_no_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/delete_no"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"/>
  </LinearLayout>

</LinearLayout>