<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/headerToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/create_form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:text="@string/app_spinner_label"
                android:labelFor="@+id/app_picker"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            <Spinner
                android:id="@+id/credential_authority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/credential_id"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--
                Deprecation of android:singleLine is ignored here as it is
                actually required to get the correct behavior.
                -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/credential_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusForward="@+id/credential_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/id_hint"
                    tools:ignore="Deprecated"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--
                Deprecation of android:singleLine is ignored here as it is
                actually required to get the correct behavior.
                -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/credential_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:hint="@string/password_hint"
                    tools:ignore="Deprecated"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
